WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116822
[Qt] REGRESSION(
r150716
): It made 15 inspector and 1 mozilla test to assert
https://bugs.webkit.org/show_bug.cgi?id=116822
Summary
[Qt] REGRESSION(r150716): It made 15 inspector and 1 mozilla test to assert
Zoltan Arvai
Reported
2013-05-27 04:46:12 PDT
After the patch 16 test asserting: tables/mozilla/bugs/bug2479-2.html inspector/timeline/timeline-enum-stability.html inspector/timeline/timeline-receive-response-event.html inspector/timeline/timeline-coalescing.html inspector/timeline/timeline-network-resource.html inspector/timeline/timeline-load-event.html inspector/timeline/timeline-time.html inspector/timeline/timeline-dom-content-loaded-event.html inspector/timeline/timeline-load.html inspector/user-metrics.html inspector/timeline-dfs.html inspector/profiler/cpu-profiler-profiling.html inspector/profiler/cpu-profiler-agent-crash-on-start.html inspector/profiler/heap-snapshot.html inspector/profiler/cpu-profiler-profile-removal.html inspector/profiler/heap-snapshot-summary-shown-node-count-preserved-when-sorting.html
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r150718%20%2829100%29/results.html
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Debug/r150739%20%2825918%29/results.html
eg. inspector/timeline/timeline-enum-stability.html: crash log for DumpRenderTree (pid 24485): STDOUT: <empty> STDERR: ASSERTION FAILED: m_families.size() == 1 STDERR: /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/platform/graphics/FontDescription.h(144) : void WebCore::FontDescription::setOneFamily(const WTF::AtomicString&) STDERR: 1 0x7f1f4489da71 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(WTFCrash+0x1e) [0x7f1f4489da71] STDERR: 2 0x7f1f4333f6d2 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7a06d2) [0x7f1f4333f6d2] STDERR: 3 0x7f1f43c6e4f0 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x10cf4f0) [0x7f1f43c6e4f0] STDERR: 4 0x7f1f43ba8633 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x1009633) [0x7f1f43ba8633] STDERR: 5 0x7f1f4334a0c8 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7ab0c8) [0x7f1f4334a0c8] STDERR: 6 0x7f1f43347b1c /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7a8b1c) [0x7f1f43347b1c] STDERR: 7 0x7f1f433f62f1 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8572f1) [0x7f1f433f62f1] STDERR: 8 0x7f1f43449688 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8aa688) [0x7f1f43449688] STDERR: 9 0x7f1f433f5b1d /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x856b1d) [0x7f1f433f5b1d] STDERR: 10 0x7f1f433f5b76 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x856b76) [0x7f1f433f5b76] STDERR: 11 0x7f1f43587dab /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x9e8dab) [0x7f1f43587dab] STDERR: 12 0x7f1f4359a7d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x9fb7d5) [0x7f1f4359a7d5] STDERR: 13 0x7f1f4338caf4 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7edaf4) [0x7f1f4338caf4] STDERR: 14 0x7f1f433906fc /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7f16fc) [0x7f1f433906fc] STDERR: 15 0x7f1f43472f85 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8d3f85) [0x7f1f43472f85] STDERR: 16 0x7f1f43402b85 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x863b85) [0x7f1f43402b85] STDERR: 17 0x7f1f433f5c05 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x856c05) [0x7f1f433f5c05] STDERR: 18 0x7f1f43587dab /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x9e8dab) [0x7f1f43587dab] STDERR: 19 0x7f1f4359a7d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x9fb7d5) [0x7f1f4359a7d5] STDERR: 20 0x7f1f4338caf4 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7edaf4) [0x7f1f4338caf4] STDERR: 21 0x7f1f433906fc /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x7f16fc) [0x7f1f433906fc] STDERR: 22 0x7f1f433f5c35 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x856c35) [0x7f1f433f5c35] STDERR: 23 0x7f1f433eed0c /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x84fd0c) [0x7f1f433eed0c] STDERR: 24 0x7f1f433f652a /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x85752a) [0x7f1f433f652a] STDERR: 25 0x7f1f433f69d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8579d5) [0x7f1f433f69d5] STDERR: 26 0x7f1f433f69d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8579d5) [0x7f1f433f69d5] STDERR: 27 0x7f1f433f69d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8579d5) [0x7f1f433f69d5] STDERR: 28 0x7f1f433f69d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8579d5) [0x7f1f433f69d5] STDERR: 29 0x7f1f433f69d5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x8579d5) [0x7f1f433f69d5] STDERR: 30 0x7f1f433a1ebf /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x802ebf) [0x7f1f433a1ebf] STDERR: 31 0x7f1f433a2176 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x803176) [0x7f1f433a2176]
Attachments
Patch
(1.65 KB, patch)
2013-05-27 05:41 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-05-27 05:28:01 PDT
Better backtrace for tables/mozilla/bugs/bug2479-2.html #1 0x00007ffff5a6dfca in WebCore::FontDescription::setOneFamily (this=0x7fffffffbd10, family=...) at /src/webkit/Source/WebCore/platform/graphics/FontDescription.h:143 #2 0x00007ffff6401414 in WebCore::RenderThemeQStyle::adjustButtonStyle (this=0x63cd50, styleResolver=0x755db0, style=0x8502d0) at /src/webkit/Source/WebCore/platform/qt/RenderThemeQStyle.cpp:253 #3 0x00007ffff632f357 in WebCore::RenderTheme::adjustStyle (this=0x63cd50, styleResolver=0x755db0, style=0x8502d0, e=0x874320, UAHasAppearance=true, border=..., background=..., backgroundColor=...) at /src/webkit/Source/WebCore/rendering/RenderTheme.cpp:201 #4 0x00007ffff5a78656 in WebCore::StyleResolver::adjustRenderStyle (this=0x755db0, style=0x8502d0, parentStyle=0x835470, e=0x874320) at /src/webkit/Source/WebCore/css/StyleResolver.cpp:1538 #5 0x00007ffff5a76079 in WebCore::StyleResolver::styleForElement (this=0x755db0, element=0x874320, defaultParent=0x0, sharingBehavior=WebCore::AllowStyleSharing, matchingBehavior=WebCore::MatchAllRules, regionForStyling=0x0) at /src/webkit/Source/WebCore/css/StyleResolver.cpp:1023 #6 0x00007ffff5b251bf in WebCore::Element::styleForRenderer (this=0x874320) at /src/webkit/Source/WebCore/dom/Element.cpp:1534 #7 0x00007ffff5b2919d in WebCore::Element::moveToFlowThreadIsNeeded (this=0x874320, cachedStyle=...) at /src/webkit/Source/WebCore/dom/Element.cpp:2726 #8 0x00007ffff5b7a934 in WebCore::NodeRenderingContext::parentRenderer (this=0x7fffffffc850) at /src/webkit/Source/WebCore/dom/NodeRenderingContext.cpp:172 #9 0x00007ffff5b7a9db in WebCore::NodeRenderingContext::shouldCreateRenderer (this=0x7fffffffc850) at /src/webkit/Source/WebCore/dom/NodeRenderingContext.cpp:186 #10 0x00007ffff5b7ae54 in WebCore::NodeRenderingContext::createRendererForElementIfNeeded (this=0x7fffffffc850) at /src/webkit/Source/WebCore/dom/NodeRenderingContext.cpp:244 #11 0x00007ffff5b2498d in WebCore::Element::createRendererIfNeeded (this=0x874320) at /src/webkit/Source/WebCore/dom/Element.cpp:1416 #12 0x00007ffff5b249e6 in WebCore::Element::attach (this=0x874320) at /src/webkit/Source/WebCore/dom/Element.cpp:1425 #13 0x00007ffff5ccbd9d in WebCore::HTMLFormControlElement::attach (this=0x874320) at /src/webkit/Source/WebCore/html/HTMLFormControlElement.cpp:215
Allan Sandfeld Jensen
Comment 2
2013-05-27 05:41:49 PDT
Created
attachment 202974
[details]
Patch
Allan Sandfeld Jensen
Comment 3
2013-05-27 05:48:05 PDT
Comment on
attachment 202974
[details]
Patch Clearing flags on attachment: 202974 Committed
r150750
: <
http://trac.webkit.org/changeset/150750
>
Allan Sandfeld Jensen
Comment 4
2013-05-27 05:48:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug