[Qt] REGRESSION(r150716): It made 15 inspector and 1 mozilla test to assert https://bugs.webkit.org/show_bug.cgi?id=116822

Reviewed by Andreas Kling.

The input fontDescription may have more than one family defined.

* platform/qt/RenderThemeQStyle.cpp:
(WebCore::RenderThemeQStyle::adjustButtonStyle):

Canonical link: https://commits.webkit.org/135118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150750 268f45cc-cd09-0410-ab3c-d52691b4dbfc